[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/JonWorldCompressed.tres" type="DynamicFont" id=1]
[ext_resource path="res://sprites/desktop/textures/Regular.png" type="Texture" id=2]
[ext_resource path="res://sprites/desktop/textures/Inverted.png" type="Texture" id=3]
[ext_resource path="res://src/battle/battle/Ability.gd" type="Script" id=4]
[ext_resource path="res://sprites/battle/abilities/CooldownUnder.png" type="Texture" id=5]
[ext_resource path="res://sprites/battle/abilities/CooldownOverGray.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 5.0
content_margin_right = 4.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=2]
content_margin_left = 5.0
content_margin_right = 4.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 5.0
content_margin_right = 4.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[node name="Ability" type="CenterContainer"]
margin_right = 59.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_top = 4.0
margin_right = 59.0
margin_bottom = 36.0

[node name="CenterContainer" type="CenterContainer" parent="VBox"]
margin_right = 59.0
margin_bottom = 11.0

[node name="Button" type="Button" parent="VBox/CenterContainer"]
margin_right = 59.0
margin_bottom = 11.0
grow_horizontal = 0
rect_min_size = Vector2( 59, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Instant"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cooldown" type="TextureProgress" parent="VBox/CenterContainer"]
visible = false
margin_right = 59.0
margin_bottom = 11.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="Label" type="Label" parent="VBox"]
margin_top = 15.0
margin_right = 59.0
margin_bottom = 32.0
rect_min_size = Vector2( 59, 17 )
text = "Use dice instantly"
align = 1
valign = 1
autowrap = true

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="VBox/CenterContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="VBox/CenterContainer/Button" to="." method="_on_Button_button_up"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
